2005-06-15  Dave Brolley  <brolley@redhat.com>

	Morpho ms1 cpu contributed on behalf of Red Hat
	2004-05-14  Stan Cox  <scox@redhat.com>

	* ms1: New directory.
	* aclocal.m4: Regenerated.
	* Makefile.in: Ditto.
	* configure: Ditto.
	* configure.in: Support added for ms1.
	* compCGEN.cxx: Ditto.

2005-06-03  Jim Blandy  <jimb@redhat.com>

	* configure.in: Apply AC_CONFIG_SUBDIRS to literal strings only.
	* acinclude.m4 (gcc_AC_CHECK_DECL, gcc_AC_CHECK_DECLS): Properly
	quote macro names.
	* configure: Regenerated.

	* Makefile.am (LIBIBERTY): Link against the libiberty.a from
	libiberty/pic, not the non-PIC version in libiberty.
	* Makefile.in, aclocal.m4: Regenerated with Automake 1.9.5.

2005-06-02  Jim Blandy  <jimb@redhat.com>

	* cgen-cpu.h: Remove references to CGEN bitset type.

	* configure.in: Don't forget to AC_SUBST the value of cpu_defs.
	* configure: Regenerated.

2005-05-10  Dave Brolley  <brolley@redhat.com>

	* configure.in: Set 'cpu_defs' with extra defines needed by Solaris.
	* configure: Regenerated.
	* Makefile.am (CXXFLAGS): Set it to @cpu_defs@.
	* Makefile.in: Regenerated.

2005-05-10  Dave Brolley  <brolley@redhat.com>

	* cgen-cpu.h ({GET,SET}[I]+MEM*): No longer const.
	* configure.in: Check for pthread library.
	* configure: Regenerated.

2005-05-06  Jim Blandy  <jimb@redhat.com>

	* cgen-engine.h (EXTRACT_MSB0_INT, EXTRACT_MSB0_UINT)
	(EXTRACT_LSB0_INT, EXTRACT_LSB0_UINT): Doc fixes.

2005-02-16  Dave Brolley  <brolley@redhat.com>

	* cgen-ops.h (TRUNCBIBI): New macro.
	(ADDOFQI): New function.
	(SUBOFQI): New function.

2005-02-12  Frank Ch. Eigler  <fche@elastic.org>

	* cgen-engine.h (virtual_insn_type): Move decl here ...
	* cgen-cpu.h: ... from here.
	* Makefile.am (SOURCES): Don't try to build fp code.
	* Makefile.in: Regenerated.

2005-02-02  Jim Blandy  <jimb@redhat.com>

	* CGEN.sh.in: Request on the command line that cgen/guile.scm be
	loaded before cgen-sid.scm; cgen-sid.scm no longer loads fixup.scm.
